@startuml

title __FILM's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace views.film {
      class com.unisa.cinehub.views.film.FilmView {
          + FilmView()
          - prepare()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.film {
      class com.unisa.cinehub.views.film.InfoFilmView {
          + InfoFilmView()
          + setParameter()
      }
    }
  }
  

  com.unisa.cinehub.views.film.FilmView -up-|> com.vaadin.flow.component.html.Div
  com.unisa.cinehub.views.film.FilmView o-- com.unisa.cinehub.control.CatalogoControl : catalogoControl
  com.unisa.cinehub.views.film.InfoFilmView .up.|> com.vaadin.flow.router.HasUrlParameter
  com.unisa.cinehub.views.film.InfoFilmView -up-|> com.vaadin.flow.component.html.Div
  com.unisa.cinehub.views.film.InfoFilmView o-- com.unisa.cinehub.control.CatalogoControl : catalogoControl
  com.unisa.cinehub.views.film.InfoFilmView o-- com.unisa.cinehub.control.GestioneCatalogoControl : gestioneCatalogoControl
  com.unisa.cinehub.views.film.InfoFilmView o-- com.unisa.cinehub.control.ModerazioneControl : moderazioneControl


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
